--- a/Todo.html
+++ b/Todo.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="Todo.css">
     </head>
     <body>
-        <p>Todo List Practice 1</p>
+        <p>Make your own Todo-List</p>
         <div class="todo-input-grid">
             <input placeholder="Todo name" class="js-input name-input">
             <input type="date" class="js-due-date duedate-input">
